[package]
name = "dnstrie"
version = "0.0.0"
authors = ["Tony Finch <dot@dotat.at>"]
edition = "2018"

[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2

[profile.release]
debug = true

[dev-dependencies.fastrand]
version = "*"

[dependencies.fastrand]
version = "*"
optional = true

[features]
default = []
test = ["fastrand"]
