[package]
name = "dnstrie"
version = "0.0.0"
authors = ["Tony Finch <dot@dotat.at>"]
edition = "2018"

[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2

[profile.release]
debug = true

[dev-dependencies.arbitrary]
version = "*"
features = ["derive"]

[dev-dependencies.fastrand]
version = "*"

[dependencies.arbitrary]
version = "*"
optional = true

[dependencies.arrayvec]
version = "*"

[dependencies.fastrand]
version = "*"
optional = true

[dependencies.thiserror]
version = "*"

[features]
default = []
test = ["fastrand", "arbitrary"]
