[package]
name = "dnstrie-fuzz"
version = "0.0.0"
authors = ["Tony Finch <dot@dotat.at>"]
edition = "2018"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies.libfuzzer-sys]
version = "*"

[dependencies.arbitrary]
version = "*"
features = ["derive"]

[dependencies.dnstrie]
path = ".."
features = ["test"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "all"
path = "src/all.rs"
test = false
doc = false

[[bin]]
name = "bmpvec"
path = "src/bmpvec.rs"
test = false
doc = false

[[bin]]
name = "dnsname"
path = "src/dnsname.rs"
test = false
doc = false

[[bin]]
name = "dnstext"
path = "src/dnstext.rs"
test = false
doc = false

[[bin]]
name = "triebits"
path = "src/triebits.rs"
test = false
doc = false
